# youtube-dl-gui

./: pyproject.toml
youtube_dl_gui/: mainframe.py  optionsframe.py
